# 3Dthings

./: .gitignore  BoliBicClaseGonza.rar  Objetos a imrpimir.xlsx  README.md  _config.yml  compact-extruder-d-jhead-24mm.stl  portarollo_1.stl  portarollo_1_export.gcode
10.Impresora/: compact-extruder-d-jhead-24mm.stl  compact-extruder-d-jhead-24mm_export.gcode  portarollo_1-slic3r.gcode  portarollo_1.stl  portarollo_1_export.gcode
11.Tantillus/: CompraEE.xlsx
90.Otros/ooml_rebel/: CMakeLists.txt
90.Otros/ooml_rebel/build_tools/cmake/: utils.cmake
90.Otros/ooml_rebel/src/: CMakeLists.txt
90.Otros/ooml_rebel/src/apps/: CMakeLists.txt
90.Otros/ooml_rebel/src/apps/rebel_cookie/: CMakeLists.txt  main.cpp
90.Otros/ooml_rebel/src/libraries/: CMakeLists.txt
90.Otros/ooml_rebel/src/libraries/core/: AbstractObject.cpp  AbstractObject.h  CMakeLists.txt  Color.cpp  Color.h  ContainerObject.cpp  ContainerObject.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Difference.cpp  Difference.h  Intersection.cpp  Intersection.h  MultiObject.cpp  MultiObject.h  Obj.cpp  Obj.h  Package.cpp  Package.h  PrimitiveObject.cpp  PrimitiveObject.h  PrimitivePart.cpp  PrimitivePart.h  Rotation.cpp  Rotation.h  RoundedBox.cpp  RoundedBox.h  Scadobject.cpp  Scadobject.h  Scale.cpp  Scale.h  Scenario.cpp  Scenario.h  Sphere.cpp  Sphere.h  Toroid.cpp  Toroid.h  Translation.cpp  (+8 more)
90.Otros/ooml_rebel/src/libraries/parts/: Batteryholder.cpp  Batteryholder.h  CMakeLists.txt  ServoWheel.cpp  ServoWheel.h  SimpleWheel.cpp  SimpleWheel.h
90.Otros/ooml_rebel/src/qtcreator-build/: CMakeCache.txt
(+1308 files in other folders)
